OM-2: adds new exception handling logic, creates the constructor for user dto class, and solves a few sonarqube bugs